Fix Review component text-align

--- a/client/src/components/Review/style.css
+++ b/client/src/components/Review/style.css
@@ -1,3 +1,7 @@
+.review {
+  text-align: left;
+}
+
 .review-guidelines {
   text-align: right;
   font-size: .5em;
